--- a/main.html
+++ b/main.html
@@ -8,6 +8,36 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<caption>
+		<h1>Student Details</h1>
+	</caption>
+
+	<table>
+		<thead>
+			<tr>
+				<th>NAME</th>
+				<th>AGE</th>
+				<th>BRANCH</th>
+			</tr>			
+		</thead>
+
+		<tbody>
+			<tr>
+				<td>sangita</td>
+				<td>20</td>
+				<td>CSE</td>
+					
+			</tr>
+
+			<tr>
+				<td>gita</td>
+				<td>28</td>
+				<td>EE</td>
+					
+			</tr>
+
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
