--- a/main.html
+++ b/main.html
@@ -17,9 +17,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<caption>
-		<h1>Student Details</h1>
-	</caption>
+	<caption>Student Details</caption>
 
 	<table>
 		<thead>
