--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<caption>Student Details</caption>
+	<h1>Student Details</h1>
 
 	<table>
 		<thead>
