--- a/main.html
+++ b/main.html
@@ -17,9 +17,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Student Details</h1>
+	
 
 	<table>
+		<caption>Student Details</caption>
 		<thead>
 			<tr>
 				<th>NAME</th>
